--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@
 
 ; 注释：学业、科研、就业、就医、其他必要事项
 出入校事由: 科研
-
-出入校事由详细描述: 前往王选计算机研究所实习
+https://github.com/q3erf/PKUAutoSubmit_online/blob/master/config.ini
+出入校事由详细描述: 前往王选计算机研究所科研
 
 [out]
 
